--- a/P003135.opf/meta.yml
+++ b/P003135.opf/meta.yml
@@ -1,7 +1,7 @@
-id: opecha:P003135
+id: P003135
 initial_creation_type: ocr
 source_metadata:
   id: bdr:W30519
   title: བསྐུ་མཉེའི་ལག་དེབ།
-  volume: ''
   author: ''
+  volumes: {}
