--- a/P003135.opf/meta.yml
+++ b/P003135.opf/meta.yml
@@ -4,4 +4,9 @@ source_metadata:
   id: bdr:W30519
   title: བསྐུ་མཉེའི་ལག་དེབ།
   author: ''
-  volumes: {}
+  volumes:
+    41ad8eb2886e445abe9b5659232f51e4:
+      image_group_id: I1KG21795
+      title: ''
+      volume_number: 1
+      total_pages: 302
