--- a/P003135.opf/layers/v001/Pagination.yml
+++ b/P003135.opf/layers/v001/Pagination.yml
@@ -1,5 +1,5 @@
 id: 232a2a3bdcb7485298636927143fdf26
-annotation_type: pagination
+annotation_type: Pagination
 revision: '00001'
 annotations:
   29176e00b50142439e55b3ea12f4f42f:
